# NexTrace

./: .gitattributes  nextrace.db  nextrace_benchmark.db  verify.py
nextrace/: .gitignore  CMakeLists.txt  README.md  benchmark.py  cli.py  indexer.py  ingest.py  query_parser.py  requirements.txt  schema.sql  search.py  tokenizer.py
nextrace/data/: generate_logs.py
nextrace/src/: filters.cpp  filters.hpp  main.cpp  posting_list.cpp  posting_list.hpp  query_parser.cpp  query_parser.hpp
nextrace/tests/: test_cpp_search_parity.py  test_indexer.py  test_ingest.py  test_query_parser.py  test_search.py  test_tokenizer.py
